bug squashing

--- a/src/app/components/landing/battlefield/fighter-section/fightersection.component.css
+++ b/src/app/components/landing/battlefield/fighter-section/fightersection.component.css
@@ -17,6 +17,7 @@
 
 .fighterShell {
     display: flex;
+    align-items: center;
     width: 100%;
 }
 
